# kaspa-graffiti

./: CHANGES.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
src/: commands.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-ui/: package.json  server.cjs
src-ui/src/: App.tsx  index.css
src-ui/src/services/: api.ts
src/graffiti/: graffiti.rs  mod.rs
src/rpc/: client.rs  mod.rs
src/wallet/: address.rs  hd.rs  kaspa_signer.rs  key.rs  mod.rs  transaction.rs
tests/: KG_Wallet.html  index.html  index_backup_20260205_150106.html  test-connection.html  test-debug.html  test-diff.html  test-official-format.html  test-pubkey.html  test_server.py  validate_address.html
