[package]
name = "kaspa-graffiti-tauri"
version = "0.1.0"
description = "KaspaGraffiti Tauri Backend"
authors = ["KaspaGraffiti"]
edition = "2021"

[[bin]]
name = "kaspa-graffiti-tauri"
path = "src/main.rs"

[dependencies]
kaspa-graffiti = { path = ".." }
tauri = { version = "2.0", features = ["wry", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
